# astrolabe

./: .gitignore  Dockerfile  LICENSE  Makefile.am  README.md  configure.ac  docker-compose.yml
.github/workflows/: ci.yml
include/: Makefile.am  astrolabe.h
lib/: Makefile.am  astrolabe.c
src/: Makefile.am  main.c
test/: Makefile  combinations
test/data/: banish-relegate  delete-remove  detrimental-harmful  endow-impart  excise-tax  flower-petal  harmful-injurious  inhibit-deterrent  injurious-harmful  lethargic-coma  petal-flower  pledge-covenant  ponder-think  prevent-avoid  relation-association  remove-eliminate  renounce-abandon  study-learn
